--- a/CouponMarket/CouponMarket_demo/app/stylesheets/app.css
+++ b/CouponMarket/CouponMarket_demo/app/stylesheets/app.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
-*{
-    margin-top: 10px;
+body{
+    padding-top: 20px;
 }
 
 *, *:before, *:after {
