--- a/CouponMarket/CouponMarket_demo/app/stylesheets/app.css
+++ b/CouponMarket/CouponMarket_demo/app/stylesheets/app.css
@@ -181,5 +181,8 @@ label {
 
 /* avatar-select */
 .avatar-select {
-  width: 100%;
+  /* width:100%;
+  float:left;    
+  box-sizing: border-box; */
 }
+
